# dittmann-maug-contracts

./: .gitignore  CLEANUP-SUMMARY.md  COMPLETION-SUMMARY.md  DOCUMENTATION-ORG-SUMMARY.md  DOCUMENTATION-ORG-TASK-LIST.md  DROPBOX-SETUP-DONE.md  DROPBOX-SUCCESS.md  PROJECT-STATUS.md  QUICK-CHECK.md  QUICK-REFERENCE.md  QUICKSTART-DROPBOX.md  README.md  SETUP.md  agents.md  pyproject.toml  setup-dropbox-env.sh
docs/: Core and Guay.md  DATA-LOADING-ARCHITECTURE.md  README.md  code-review-20260210.md  dittman-maug-contract-construction-procedure.md  dittman-maug-contract-construction-working.md
docs/ADMIN/: setup.md  stage1-output-summary.md
docs/IMPLEMENTATION/: data-construction-manual.md
docs/PROJECT/: implementation-roadmap.md
docs/investigation/: 2026-03-24-nS-mystery.md  README.md
docs/references/: core-guay-2002.md
output/: contracts_2000_5yrs.parquet  paper_table1.csv  replicated_table1.csv  table1_diff.csv  table1_stats.yaml  validation_report.md
src/py/: contracts.py  data_loading.py  main.py  pipeline.py  reporting.py  schemas.py
src/py/dittmann_maug/: cli.py  config.py  pipeline.py  validate.py
src/py/dittmann_maug/contracts/: stage1_inputs.py
src/py/dittmann_maug/io/: loaders.py  paths.py
src/py/dittmann_maug/util/: log.py
src/py/output/: contracts_2000_5yrs.csv  replicated_table1.csv  table1_diff.csv  table1_stats.yaml  validation_report.md
tests/: test_contracts_unit.py  test_panel_a_tolerance.py  test_pipeline_integration.py  test_reporting_reference.py  test_validation_report.py
