[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dittmann-maug"
version = "0.1.0"
description = "Replication of Dittman and Maug (2007) CEO compensation contract construction from ExecuComp data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markitdown[all]>=0.1.4",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
]

[project.scripts]
dittmann-maug = "dittmann_maug.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/py/dittmann_maug"]
